revert method name change getFirst